@@ -1,12 +1,10 @@
 package com.bakdata.conquery.sql.conversion.cqelement.concept;
 
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -20,27 +18,28 @@ import com.bakdata.conquery.sql.conversion.cqelement.concept.select.SelectContex
 import com.bakdata.conquery.sql.conversion.cqelement.concept.select.SelectConversions;
 import com.bakdata.conquery.sql.conversion.dialect.SqlFunctionProvider;
 import com.bakdata.conquery.sql.conversion.model.ColumnDateRange;
+import com.bakdata.conquery.sql.conversion.model.QueryStep;
 import com.bakdata.conquery.sql.conversion.model.filter.ConceptFilter;
+import com.bakdata.conquery.sql.conversion.model.filter.ConditionUtil;
 import com.bakdata.conquery.sql.conversion.model.filter.FilterType;
 import com.bakdata.conquery.sql.conversion.model.filter.Filters;
-import com.bakdata.conquery.sql.conversion.model.QueryStep;
+import com.bakdata.conquery.sql.conversion.model.select.FieldWrapper;
 import com.bakdata.conquery.sql.conversion.model.select.SqlSelect;
 import com.bakdata.conquery.sql.conversion.model.select.SqlSelects;
-import com.bakdata.conquery.sql.conversion.model.filter.ConditionUtil;
-import com.bakdata.conquery.sql.conversion.model.select.FieldSqlSelect;
 import org.jooq.Condition;
 import org.jooq.impl.DSL;
 
 public class CQConceptConverter implements NodeConverter<CQConcept> {
 
-	private static final Pattern WHITESPACE = Pattern.compile("\\s+");
 	private final List<ConceptCte> conceptCTEs;
 	private final FilterValueConversions filterValueConversions;
 	private final SelectConversions selectConversions;
+	private final SqlFunctionProvider functionProvider;
 
-	public CQConceptConverter(FilterConversions filterConversions, SelectConversions selectConversions) {
+	public CQConceptConverter(FilterConversions filterConversions, SelectConversions selectConversions, SqlFunctionProvider functionProvider) {
 		this.filterValueConversions = new FilterValueConversions(filterConversions);
 		this.selectConversions = selectConversions;
+		this.functionProvider = functionProvider;
 		this.conceptCTEs = List.of(
 				new PreprocessingCte(),
 				new EventFilterCte(),
@@ -62,118 +61,115 @@ public class CQConceptConverter implements NodeConverter<CQConcept> {
 			throw new UnsupportedOperationException("Can't handle concepts with multiple tables for now.");
 		}
 
-		CQTable table = node.getTables().get(0);
-		String conceptLabel = createConceptLabel(node, context);
-
-		ConceptTables conceptTables = new ConceptTables(conceptLabel, getRequiredSteps(table), table.getConnector().getTable().getName());
-		Optional<ColumnDateRange> validityDateSelect = convertValidityDate(context.getSqlDialect().getFunction(), table, conceptLabel, conceptTables);
-		List<ConceptFilter> conceptFilters = convertConceptFilters(context, table, conceptTables, validityDateSelect);
-		List<SqlSelects> conceptSelects = getConceptSelects(node, context, table, conceptLabel, conceptTables, validityDateSelect);
-
-		CteContext cteContext = CteContext.builder()
-										  .context(context)
-										  .filters(conceptFilters)
-										  .selects(conceptSelects)
-										  .primaryColumn(DSL.field(DSL.name(context.getConfig().getPrimaryColumn())))
-										  .validityDateRange(validityDateSelect)
-										  .isExcludedFromDateAggregation(node.isExcludeFromTimeAggregation())
-										  .conceptTables(conceptTables)
-										  .conceptLabel(conceptLabel)
-										  .build();
+		ConceptCteContext conceptCteContext = createConceptCteContext(node, context);
 
 		Optional<QueryStep> lastQueryStep = Optional.empty();
 		for (ConceptCte queryStep : this.conceptCTEs) {
-			Optional<QueryStep> convertedStep = queryStep.convert(cteContext, lastQueryStep);
+			Optional<QueryStep> convertedStep = queryStep.convert(conceptCteContext, lastQueryStep);
 			if (convertedStep.isEmpty()) {
 				continue;
 			}
 			lastQueryStep = convertedStep;
-			cteContext = cteContext.withPrevious(lastQueryStep.get());
+			conceptCteContext = conceptCteContext.withPrevious(lastQueryStep.get());
 		}
 
-		return context.withQueryStep(lastQueryStep.orElseThrow(() -> new RuntimeException("No conversion for concept possible. Required steps: %s".formatted(requiredSteps()))));
+		return context.toBuilder()
+					  .queryStep(lastQueryStep.orElseThrow(() -> new RuntimeException(
+							  "No conversion for concept possible. Required steps: %s".formatted(requiredSteps())))
+					  )
+					  .build();
 	}
 
-	private Set<CteStep> getRequiredSteps(CQTable table) {
-		if (table.getFilters().isEmpty()) {
-			return CteStep.MANDATORY_STEPS;
-		}
-		return table.getFilters().stream()
-					.flatMap(filterValue -> this.filterValueConversions.requiredSteps(filterValue).stream())
-					.collect(Collectors.toSet());
-	}
+	private ConceptCteContext createConceptCteContext(CQConcept node, ConversionContext context) {
 
-	/**
-	 * Converts the concept-level selects before we convert the table-level selects,
-	 * {@link CQConcept#getResultInfos()} will create the result infos in the same order.
-	 */
-	private List<SqlSelects> getConceptSelects(
-			CQConcept node,
-			ConversionContext context,
-			CQTable table,
-			String conceptLabel,
-			ConceptTables conceptTables,
-			Optional<ColumnDateRange> validityDateSelect
-	) {
-		SelectContext selectContext = new SelectContext(context, node, conceptLabel, validityDateSelect, conceptTables);
-		return Stream.concat(node.getSelects().stream(), table.getSelects().stream())
-					 .map(select -> this.selectConversions.convert(select, selectContext))
-					 .toList();
-	}
+		CQTable table = node.getTables().get(0);
+		String tableName = table.getConnector().getTable().getName();
+		String conceptLabel = context.getNameGenerator().conceptName(node);
+		Optional<ColumnDateRange> validityDateSelect = convertValidityDate(table, tableName, conceptLabel);
 
-	private List<ConceptFilter> convertConceptFilters(
-			ConversionContext context,
-			CQTable table,
-			ConceptTables conceptTables,
-			Optional<ColumnDateRange> validityDateSelect
-	) {
+		Set<ConceptCteStep> requiredSteps = getRequiredSteps(table, context.dateRestrictionActive(), validityDateSelect);
+		ConceptTables conceptTables = new ConceptTables(conceptLabel, requiredSteps, tableName, context.getNameGenerator());
+
+		// convert filters
 		Stream<ConceptFilter> conceptFilters = table.getFilters().stream()
 													.map(filterValue -> this.filterValueConversions.convert(filterValue, context, conceptTables));
 		Stream<ConceptFilter> dateRestrictionFilter = getDateRestriction(context, validityDateSelect).stream();
-		return Stream.concat(conceptFilters, dateRestrictionFilter).toList();
+		List<ConceptFilter> allFilters = Stream.concat(conceptFilters, dateRestrictionFilter).toList();
+
+		// convert selects
+		SelectContext selectContext = new SelectContext(context, node, conceptLabel, validityDateSelect, conceptTables);
+		List<SqlSelects> conceptSelects = Stream.concat(node.getSelects().stream(), table.getSelects().stream())
+												.map(select -> this.selectConversions.convert(select, selectContext))
+												.toList();
+
+		return ConceptCteContext.builder()
+								.conversionContext(context)
+								.filters(allFilters)
+								.selects(conceptSelects)
+								.primaryColumn(DSL.field(DSL.name(context.getConfig().getPrimaryColumn())))
+								.validityDate(validityDateSelect)
+								.isExcludedFromDateAggregation(node.isExcludeFromTimeAggregation())
+								.conceptTables(conceptTables)
+								.conceptLabel(conceptLabel)
+								.build();
 	}
 
-	private static String createConceptLabel(CQConcept node, ConversionContext context) {
-		// only relevant for debugging purposes as it will be part of the generated SQL query
-		// we prefix each cte name of a concept with an incrementing counter to prevent naming collisions if the same concept is selected multiple times
-		return "%s_%s".formatted(
-				context.getQueryStepCounter(),
-				WHITESPACE.matcher(node.getUserOrDefaultLabel(Locale.ENGLISH).toLowerCase()).replaceAll("_")
-		);
+	/**
+	 * Determines if event/aggregation filter steps are required.
+	 *
+	 * <p>
+	 * {@link ConceptCteStep#MANDATORY_STEPS} are allways part of any concept conversion.
+	 */
+	private Set<ConceptCteStep> getRequiredSteps(CQTable table, boolean dateRestrictionRequired, Optional<ColumnDateRange> validityDateSelect) {
+		Set<ConceptCteStep> requiredSteps = new HashSet<>(ConceptCteStep.MANDATORY_STEPS);
+
+		if (dateRestrictionApplicable(dateRestrictionRequired, validityDateSelect)) {
+			requiredSteps.add(ConceptCteStep.EVENT_FILTER);
+		}
+
+		table.getFilters().stream()
+			 .flatMap(filterValue -> this.filterValueConversions.requiredSteps(filterValue).stream())
+			 .forEach(requiredSteps::add);
+
+		return requiredSteps;
 	}
 
-	private static Optional<ColumnDateRange> convertValidityDate(
-			SqlFunctionProvider functionProvider,
+	private Optional<ColumnDateRange> convertValidityDate(
 			CQTable table,
-			String conceptLabel,
-			ConceptTables conceptTables
+			String tableName,
+			String conceptLabel
 	) {
 		if (Objects.isNull(table.findValidityDate())) {
 			return Optional.empty();
 		}
-		return Optional.of(functionProvider.daterange(table.findValidityDate(), conceptTables.getPredecessorTableName(CteStep.PREPROCESSING), conceptLabel));
+		ColumnDateRange validityDate = this.functionProvider.daterange(table.findValidityDate(), tableName, conceptLabel);
+		return Optional.of(validityDate);
 	}
 
-	private static Optional<ConceptFilter> getDateRestriction(ConversionContext context, Optional<ColumnDateRange> validityDate) {
+	private Optional<ConceptFilter> getDateRestriction(ConversionContext context, Optional<ColumnDateRange> validityDate) {
 
-		if (!context.dateRestrictionActive() || validityDate.isEmpty()) {
+		if (!dateRestrictionApplicable(context.dateRestrictionActive(), validityDate)) {
 			return Optional.empty();
 		}
 
-		ColumnDateRange dateRestriction = context.getSqlDialect().getFunction()
-												 .daterange(context.getDateRestrictionRange())
-												 .asDateRestrictionRange();
+		ColumnDateRange dateRestriction = this.functionProvider
+				.daterange(context.getDateRestrictionRange())
+				.asDateRestrictionRange();
 
 		List<SqlSelect> dateRestrictionSelects = dateRestriction.toFields().stream()
-																.map(FieldSqlSelect::new)
+																.map(FieldWrapper::new)
 																.collect(Collectors.toList());
 
-		Condition dateRestrictionCondition = context.getSqlDialect().getFunction().dateRestriction(dateRestriction, validityDate.get());
+		Condition dateRestrictionCondition = this.functionProvider.dateRestriction(dateRestriction, validityDate.get());
 
 		return Optional.of(new ConceptFilter(
 				SqlSelects.builder().forPreprocessingStep(dateRestrictionSelects).build(),
-				Filters.builder().event(Collections.singletonList(ConditionUtil.wrap(dateRestrictionCondition, FilterType.EVENT))).build()
+				Filters.builder().event(List.of(ConditionUtil.wrap(dateRestrictionCondition, FilterType.EVENT))).build()
 		));
+	}
+
+	private static boolean dateRestrictionApplicable(boolean dateRestrictionRequired, Optional<ColumnDateRange> validityDateSelect) {
+		return dateRestrictionRequired && validityDateSelect.isPresent();
 	}
 
 }
